--- a/crypt/Makefile
+++ b/crypt/Makefile
@@ -8,6 +8,7 @@ debug:
 	${GCC} ${SOURCE}.c -g -D DEBUG ${OPTS} -o ${SOURCE}_debug
 clean:
 	-rm ${SOURCE}
-	rm ${SOURCE}_debug
+	-rm ${SOURCE}_debug
+	-rm -rf *.dSYM
 test:
 	./${SOURCE}_debug
